syntax = "proto3";

option java_multiple_files = true;

package org.matheclipse.core.grpc;

message PBFraction { 
  PBInteger numerator = 1;
  PBInteger denominator = 2;
}

message PBInteger {
  bytes value = 1;
} 

message PBComplex {
  PBFraction re_value = 1;
  PBFraction im_value = 2;
}


message PBNum {
  double value = 1;
}

message PBComplexNum {
  double re_value = 1;
  double im_value = 2;
}
 
message PBBuiltinSymbol {
  enum ID { 
    Abort = 0;
    Abs = 1;
    AbsArg = 2;
    Accumulate = 3;
    AddTo = 4;
    AlgebraicNumber = 5;
    Algebraics = 6;
    All = 7;
    AllTrue = 8;
    Alternatives = 9;
    And = 10;
    AngleVector = 11;
    AntihermitianMatrixQ = 12;
    AntisymmetricMatrixQ = 13;
    AnyTrue = 14;
    Apart = 15;
    AppellF1 = 16;
    Append = 17;
    AppendTo = 18;
    Apply = 19;
    ArcCos = 20;
    ArcCosh = 21;
    ArcCot = 22;
    ArcCoth = 23;
    ArcCsc = 24;
    ArcCsch = 25;
    ArcSec = 26;
    ArcSech = 27;
    ArcSin = 28;
    ArcSinh = 29;
    ArcTan = 30;
    ArcTanh = 31;
    Arg = 32;
    Array = 33;
    ArrayDepth = 34;
    ArrayPad = 35;
    ArrayQ = 36;
    Assumptions = 37;
    AtomQ = 38;
    Attributes = 39;
    Automatic = 40;
    Axes = 41;
    AxesOrigin = 42;
    AxesStyle = 43;
    Background = 44;
    Begin = 45;
    BeginPackage = 46;
    BellB = 47;
    BellY = 48;
    BernoulliB = 49;
    BernoulliDistribution = 50;
    BesselI = 51;
    BesselJ = 52;
    BesselK = 53;
    BesselY = 54;
    Beta = 55;
    BetaRegularized = 56;
    BinCounts = 57;
    Binomial = 58;
    BinomialDistribution = 59;
    BitLength = 60;
    Blank = 61;
    Block = 62;
    Boole = 63;
    BooleanConvert = 64;
    BooleanMinimize = 65;
    BooleanQ = 66;
    BooleanTable = 67;
    BooleanVariables = 68;
    Booleans = 69;
    BrayCurtisDistance = 70;
    Break = 71;
    CDF = 72;
    CanberraDistance = 73;
    Cancel = 74;
    CarmichaelLambda = 75;
    CartesianProduct = 76;
    Cases = 77;
    Catalan = 78;
    CatalanNumber = 79;
    Catch = 80;
    Catenate = 81;
    Ceiling = 82;
    CentralMoment = 83;
    CharacterEncoding = 84;
    CharacteristicPolynomial = 85;
    ChebyshevT = 86;
    ChebyshevU = 87;
    ChessboardDistance = 88;
    ChineseRemainder = 89;
    CholeskyDecomposition = 90;
    Chop = 91;
    CirclePoints = 92;
    Clear = 93;
    ClearAll = 94;
    ClearAttributes = 95;
    Coefficient = 96;
    CoefficientList = 97;
    CoefficientRules = 98;
    Collect = 99;
    Colon = 100;
    Commonest = 101;
    Compile = 102;
    Complement = 103;
    Complex = 104;
    ComplexExpand = 105;
    ComplexInfinity = 106;
    Complexes = 107;
    ComplexityFunction = 108;
    ComposeList = 109;
    Composition = 110;
    CompoundExpression = 111;
    Condition = 112;
    Conjugate = 113;
    ConjugateTranspose = 114;
    Constant = 115;
    ConstantArray = 116;
    Continue = 117;
    ContinuedFraction = 118;
    ConvexHullMesh = 119;
    CoprimeQ = 120;
    Correlation = 121;
    Cos = 122;
    CosIntegral = 123;
    Cosh = 124;
    CoshIntegral = 125;
    CosineDistance = 126;
    Cot = 127;
    Coth = 128;
    Count = 129;
    Covariance = 130;
    Cross = 131;
    Csc = 132;
    Csch = 133;
    CubeRoot = 134;
    Curl = 135;
    D = 136;
    DSolve = 137;
    Decrement = 138;
    Default = 139;
    Defer = 140;
    Definition = 141;
    Degree = 142;
    Delete = 143;
    DeleteCases = 144;
    DeleteDuplicates = 145;
    Denominator = 146;
    Depth = 147;
    Derivative = 148;
    DesignMatrix = 149;
    Det = 150;
    Diagonal = 151;
    DiagonalMatrix = 152;
    DiceDissimilarity = 153;
    DigitQ = 154;
    Dimensions = 155;
    DiracDelta = 156;
    DirectedInfinity = 157;
    Direction = 158;
    DiscreteDelta = 159;
    DiscreteUniformDistribution = 160;
    Discriminant = 161;
    Disputed = 162;
    Distribute = 163;
    Divergence = 164;
    DivideBy = 165;
    Divisible = 166;
    DivisorSigma = 167;
    Divisors = 168;
    Do = 169;
    Dot = 170;
    Drop = 171;
    E = 172;
    EasterSunday = 173;
    Eigenvalues = 174;
    Eigenvectors = 175;
    Element = 176;
    ElementData = 177;
    Eliminate = 178;
    EllipticE = 179;
    EllipticF = 180;
    EllipticPi = 181;
    End = 182;
    EndPackage = 183;
    Equal = 184;
    Equivalent = 185;
    Erf = 186;
    Erfc = 187;
    Erfi = 188;
    ErlangDistribution = 189;
    EuclideanDistance = 190;
    EulerE = 191;
    EulerGamma = 192;
    EulerPhi = 193;
    EvenQ = 194;
    ExactNumberQ = 195;
    Except = 196;
    Exists = 197;
    Exp = 198;
    ExpIntegralE = 199;
    ExpIntegralEi = 200;
    Expand = 201;
    ExpandAll = 202;
    Expectation = 203;
    Exponent = 204;
    ExponentialDistribution = 205;
    Export = 206;
    ExtendedGCD = 207;
    Extract = 208;
    Factor = 209;
    FactorInteger = 210;
    FactorSquareFree = 211;
    FactorSquareFreeList = 212;
    FactorTerms = 213;
    Factorial = 214;
    Factorial2 = 215;
    False = 216;
    Fibonacci = 217;
    FindInstance = 218;
    FindRoot = 219;
    First = 220;
    Fit = 221;
    FixedPoint = 222;
    FixedPointList = 223;
    Flat = 224;
    Flatten = 225;
    FlattenAt = 226;
    Floor = 227;
    Fold = 228;
    FoldList = 229;
    For = 230;
    ForAll = 231;
    FourierMatrix = 232;
    FractionalPart = 233;
    FrechetDistribution = 234;
    FreeQ = 235;
    FresnelC = 236;
    FresnelS = 237;
    FrobeniusSolve = 238;
    FromCharacterCode = 239;
    FromContinuedFraction = 240;
    FromPolarCoordinates = 241;
    FullForm = 242;
    FullSimplify = 243;
    Function = 244;
    GCD = 245;
    Gamma = 246;
    GammaDistribution = 247;
    GammaRegularized = 248;
    Gather = 249;
    GegenbauerC = 250;
    GeometricDistribution = 251;
    GeometricMean = 252;
    Get = 253;
    Glaisher = 254;
    GoldenRatio = 255;
    Graphics = 256;
    Graphics3D = 257;
    Greater = 258;
    GreaterEqual = 259;
    GroebnerBasis = 260;
    GumbelDistribution = 261;
    HarmonicNumber = 262;
    Haversine = 263;
    Head = 264;
    HeavisideTheta = 265;
    HermiteH = 266;
    HermitianMatrixQ = 267;
    HilbertMatrix = 268;
    Hold = 269;
    HoldAll = 270;
    HoldFirst = 271;
    HoldForm = 272;
    HoldRest = 273;
    Horner = 274;
    HornerForm = 275;
    HurwitzZeta = 276;
    Hypergeometric1F1 = 277;
    Hypergeometric2F1 = 278;
    HypergeometricDistribution = 279;
    HypergeometricPFQ = 280;
    HypergeometricPFQRegularized = 281;
    I = 282;
    Identity = 283;
    IdentityMatrix = 284;
    If = 285;
    Im = 286;
    Implies = 287;
    Import = 288;
    Increment = 289;
    Indeterminate = 290;
    Inequality = 291;
    InexactNumberQ = 292;
    Infinity = 293;
    Information = 294;
    Inner = 295;
    Insert = 296;
    Integer = 297;
    IntegerExponent = 298;
    IntegerLength = 299;
    IntegerPart = 300;
    IntegerPartitions = 301;
    IntegerQ = 302;
    Integers = 303;
    Integrate = 304;
    InterpolatingFunction = 305;
    InterpolatingPolynomial = 306;
    Interpolation = 307;
    Intersection = 308;
    Interval = 309;
    Inverse = 310;
    InverseErf = 311;
    InverseErfc = 312;
    InverseFunction = 313;
    InverseHaversine = 314;
    InverseLaplaceTransform = 315;
    JaccardDissimilarity = 316;
    JacobiMatrix = 317;
    JacobiSymbol = 318;
    JavaForm = 319;
    Join = 320;
    KOrderlessPartitions = 321;
    KPartitions = 322;
    Khinchin = 323;
    KroneckerDelta = 324;
    Kurtosis = 325;
    LCM = 326;
    LUDecomposition = 327;
    LaguerreL = 328;
    LaplaceTransform = 329;
    Last = 330;
    LeafCount = 331;
    LeastSquares = 332;
    LegendreP = 333;
    LegendreQ = 334;
    Length = 335;
    Less = 336;
    LessEqual = 337;
    LetterQ = 338;
    Level = 339;
    LevelQ = 340;
    Limit = 341;
    Line = 342;
    LinearModelFit = 343;
    LinearProgramming = 344;
    LinearSolve = 345;
    LiouvilleLambda = 346;
    List = 347;
    ListConvolve = 348;
    ListCorrelate = 349;
    ListQ = 350;
    Listable = 351;
    Literal = 352;
    Log = 353;
    Log10 = 354;
    Log2 = 355;
    LogGamma = 356;
    LogIntegral = 357;
    LogNormalDistribution = 358;
    LogicalExpand = 359;
    LogisticSigmoid = 360;
    LowerCaseQ = 361;
    LowerTriangularize = 362;
    LucasL = 363;
    MachineNumberQ = 364;
    ManhattanDistance = 365;
    MantissaExponent = 366;
    Map = 367;
    MapAll = 368;
    MapAt = 369;
    MapThread = 370;
    MatchQ = 371;
    MatchingDissimilarity = 372;
    MathMLForm = 373;
    MatrixForm = 374;
    MatrixMinimalPolynomial = 375;
    MatrixPower = 376;
    MatrixQ = 377;
    MatrixRank = 378;
    Max = 379;
    MaxIterations = 380;
    MaxPoints = 381;
    Mean = 382;
    MeanDeviation = 383;
    Median = 384;
    MeijerG = 385;
    MemberQ = 386;
    MersennePrimeExponent = 387;
    MersennePrimeExponentQ = 388;
    MeshRange = 389;
    MessageName = 390;
    Method = 391;
    Min = 392;
    MinimalPolynomial = 393;
    Minus = 394;
    Missing = 395;
    MissingQ = 396;
    Mod = 397;
    Module = 398;
    Modulus = 399;
    MoebiusMu = 400;
    MonomialList = 401;
    Most = 402;
    Multinomial = 403;
    MultiplicativeOrder = 404;
    N = 405;
    NDSolve = 406;
    NFourierTransform = 407;
    NHoldAll = 408;
    NHoldFirst = 409;
    NHoldRest = 410;
    NIntegrate = 411;
    NMaximize = 412;
    NMinimize = 413;
    NRoots = 414;
    NSolve = 415;
    NakagamiDistribution = 416;
    Names = 417;
    Nand = 418;
    Nearest = 419;
    Negative = 420;
    Nest = 421;
    NestList = 422;
    NestWhile = 423;
    NestWhileList = 424;
    NextPrime = 425;
    NonCommutativeMultiply = 426;
    NonNegative = 427;
    NonPositive = 428;
    None = 429;
    NoneTrue = 430;
    Nonexistent = 431;
    Nor = 432;
    Norm = 433;
    Normal = 434;
    NormalDistribution = 435;
    Normalize = 436;
    Not = 437;
    NotApplicable = 438;
    NotAvailable = 439;
    NotListQ = 440;
    Null = 441;
    NullSpace = 442;
    NumberFieldRootsOfUnity = 443;
    NumberQ = 444;
    Numerator = 445;
    NumericFunction = 446;
    NumericQ = 447;
    O = 448;
    OddQ = 449;
    OneIdentity = 450;
    Operate = 451;
    Optional = 452;
    Options = 453;
    Or = 454;
    Order = 455;
    OrderedQ = 456;
    Ordering = 457;
    Orderless = 458;
    OrthogonalMatrixQ = 459;
    Orthogonalize = 460;
    Out = 461;
    Outer = 462;
    PDF = 463;
    Package = 464;
    PadLeft = 465;
    PadRight = 466;
    ParametricPlot = 467;
    Part = 468;
    Partition = 469;
    PartitionsP = 470;
    PartitionsQ = 471;
    Pattern = 472;
    PatternTest = 473;
    PerfectNumber = 474;
    PerfectNumberQ = 475;
    Permutations = 476;
    Pi = 477;
    Piecewise = 478;
    Plot = 479;
    Plot3D = 480;
    PlotRange = 481;
    Plus = 482;
    Pochhammer = 483;
    Point = 484;
    PoissonDistribution = 485;
    PolyGamma = 486;
    PolyLog = 487;
    Polygon = 488;
    PolynomialExtendedGCD = 489;
    PolynomialGCD = 490;
    PolynomialLCM = 491;
    PolynomialQ = 492;
    PolynomialQuotient = 493;
    PolynomialQuotientRemainder = 494;
    PolynomialRemainder = 495;
    Position = 496;
    Positive = 497;
    PossibleZeroQ = 498;
    Power = 499;
    PowerExpand = 500;
    PowerMod = 501;
    PreDecrement = 502;
    PreIncrement = 503;
    Precision = 504;
    PrecisionGoal = 505;
    Prepend = 506;
    PrependTo = 507;
    Prime = 508;
    PrimeOmega = 509;
    PrimePi = 510;
    PrimePowerQ = 511;
    PrimeQ = 512;
    Primes = 513;
    PrimitiveRootList = 514;
    Print = 515;
    Product = 516;
    ProductLog = 517;
    Projection = 518;
    PseudoInverse = 519;
    Put = 520;
    QRDecomposition = 521;
    Quantile = 522;
    Quiet = 523;
    Quit = 524;
    Quotient = 525;
    QuotientRemainder = 526;
    RandomChoice = 527;
    RandomInteger = 528;
    RandomReal = 529;
    RandomSample = 530;
    RandomVariate = 531;
    Range = 532;
    Rational = 533;
    Rationalize = 534;
    Rationals = 535;
    Re = 536;
    Real = 537;
    RealNumberQ = 538;
    Reals = 539;
    Reap = 540;
    Rectangle = 541;
    Reduce = 542;
    Refine = 543;
    Repeated = 544;
    RepeatedNull = 545;
    Replace = 546;
    ReplaceAll = 547;
    ReplaceList = 548;
    ReplacePart = 549;
    ReplaceRepeated = 550;
    Rest = 551;
    Resultant = 552;
    Return = 553;
    Reverse = 554;
    Riffle = 555;
    RogersTanimotoDissimilarity = 556;
    Root = 557;
    RootIntervals = 558;
    RootOf = 559;
    Roots = 560;
    RotateLeft = 561;
    RotateRight = 562;
    Round = 563;
    RowReduce = 564;
    Rule = 565;
    RuleDelayed = 566;
    RussellRaoDissimilarity = 567;
    SameQ = 568;
    SatisfiableQ = 569;
    Scan = 570;
    Sec = 571;
    Sech = 572;
    Second = 573;
    Select = 574;
    Sequence = 575;
    Series = 576;
    SeriesData = 577;
    Set = 578;
    SetAttributes = 579;
    SetDelayed = 580;
    Share = 581;
    Show = 582;
    Sign = 583;
    SignCmp = 584;
    Simplify = 585;
    Sin = 586;
    SinIntegral = 587;
    Sinc = 588;
    SingularValueDecomposition = 589;
    Sinh = 590;
    SinhIntegral = 591;
    Skewness = 592;
    Slot = 593;
    SlotSequence = 594;
    SokalSneathDissimilarity = 595;
    Solve = 596;
    Sort = 597;
    Sow = 598;
    Span = 599;
    Split = 600;
    SplitBy = 601;
    Sqrt = 602;
    SquareFreeQ = 603;
    SquaredEuclideanDistance = 604;
    StandardDeviation = 605;
    Standardize = 606;
    StieltjesGamma = 607;
    StirlingS1 = 608;
    StirlingS2 = 609;
    String = 610;
    StringDrop = 611;
    StringJoin = 612;
    StringLength = 613;
    StringTake = 614;
    StruveH = 615;
    StruveL = 616;
    StudentTDistribution = 617;
    Subfactorial = 618;
    Subscript = 619;
    Subsets = 620;
    Subsuperscript = 621;
    SubtractFrom = 622;
    Sum = 623;
    Superscript = 624;
    Surd = 625;
    SurfaceGraphics = 626;
    Switch = 627;
    Symbol = 628;
    SymbolName = 629;
    SymbolQ = 630;
    SymmetricMatrixQ = 631;
    SyntaxLength = 632;
    SyntaxQ = 633;
    Table = 634;
    Take = 635;
    Tally = 636;
    Tan = 637;
    Tanh = 638;
    TautologyQ = 639;
    Taylor = 640;
    TeXForm = 641;
    TensorDimensions = 642;
    TensorProduct = 643;
    TensorRank = 644;
    Thread = 645;
    Through = 646;
    Throw = 647;
    TimeConstrained = 648;
    Times = 649;
    TimesBy = 650;
    Timing = 651;
    ToCharacterCode = 652;
    ToPolarCoordinates = 653;
    ToRadicals = 654;
    ToString = 655;
    ToUnicode = 656;
    ToeplitzMatrix = 657;
    Together = 658;
    TooLarge = 659;
    Total = 660;
    Tr = 661;
    Trace = 662;
    Transpose = 663;
    Trig = 664;
    TrigExpand = 665;
    TrigReduce = 666;
    TrigToExp = 667;
    True = 668;
    TrueQ = 669;
    Tuples = 670;
    Unequal = 671;
    Unevaluated = 672;
    Union = 673;
    Unique = 674;
    UnitStep = 675;
    UnitVector = 676;
    UnitaryMatrixQ = 677;
    Unknown = 678;
    UnsameQ = 679;
    Unset = 680;
    UpSet = 681;
    UpSetDelayed = 682;
    UpperCaseQ = 683;
    UpperTriangularize = 684;
    ValueQ = 685;
    VandermondeMatrix = 686;
    Variable = 687;
    Variables = 688;
    Variance = 689;
    VectorAngle = 690;
    VectorQ = 691;
    WeibullDistribution = 692;
    Which = 693;
    While = 694;
    White = 695;
    With = 696;
    Xor = 697;
    YuleDissimilarity = 698;
    Zeta = 699;
  }
  ID id = 1;
}

message PBSymbol {
  string name = 1;
}

message PBString {
  string content = 1;
}

message PBPattern {
  bool default_value = 1;
  PBExpr condition = 2;
  PBExpr default = 3;
  PBSymbol symbol = 4;
}

message PBExpr {
  oneof atom {
     PBAST ast = 1;
     PBBuiltinSymbol symbol = 2;
     PBSymbol identifier = 3;
     PBInteger big_integer = 4;
     PBFraction big_fraction = 5;
     PBComplex big_complex = 6;
     PBNum numeric = 7;
     PBComplexNum complex_numeric = 8; 
     PBPattern pattern = 9;
     PBString str = 10;
  }
}

message PBAST {
  PBExpr head = 1;
  repeated PBExpr arg = 2;
}

service SymjaService {
    rpc eval(PBExpr) returns (PBExpr);
}